--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-docutils==0.13.1
-docopt==0.6.2
-tqdm==4.28.1
-pytest==3.9.3
-numpy==1.21
-keras==2.2.4
-gputil==1.3.0
-sklearn=0.20.1
+docutils
+docopt
+tqdm
+pytest
+numpy
+keras
+gputil
+sklearn
 opencv-python
-tensorflow
-Pillow==9.1.0
+tensorflow==2.8.0
+Pillow
